--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+Assets/Photon/Quantum/Assemblies/PhotonDeterministic.*
+Assets/Photon/Quantum/Assemblies/quantum.core.*
+Assets/Photon/Quantum/Assemblies/quantum.code.*
